--- a/checkout.html
+++ b/checkout.html
@@ -79,26 +79,26 @@
 				<h3 class="my-3 bord shadow text-center"><i class="fas fa-stopwatch p-2"></i>Delivery on time</h3>
 			</div>
 		</div>
-		<form class="form">
+		<form class="form" id="checkout-Form">
 			<div class="row bord p-5 shadow m-5">
 				<div class="col-sm-6">
 					<div class="mt-3">
 						<label for="fName" class="form-label">First Name:</label>
-						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name" />
+						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name"  pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]+$" minlength="3" required />
 						<div id="errorName" class="invalid-feedback">This field is required and must have, at least, 3
 							characters
 						</div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fEmail" class="form-label">Email:</label>
-						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" />
+						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" required />
 						<div id="errorEmail" class="invalid-feedback">This field is required and must contain an '@' and
 							have, at
 							least, 3 characters</div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fAddress" class="form-label">Address:</label>
-						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" />
+						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" required />
 						<div id="errorAddress" class="invalid-feedback">This field is required and must have, at least,
 							3 characters
 						</div>
@@ -107,26 +107,26 @@
 				<div class="col-sm-6">
 					<div class="mt-3">
 						<label for="fLastN" class="form-label">Last Name:</label>
-						<input id="fLastN" class="form-control" type="text" placeholder="Last Name" minlength="3" />
+						<input id="fLastN" class="form-control" type="text" placeholder="Last Name"  pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]+$" minlength="3" required />
 						<div id="errorLastN" class="invalid-feedback">This field is required and must have, at least, 3
 							characters
 						</div>
 					</div>
 					<div class="mt-3">
 						<label for="fPassword" class="form-label">Password:</label>
-						<input id="fPassword" class="form-control" title="(4-8 characters)" type="password"
-							minlength="4" maxlength="8" placeholder="Password" />
+						<input id="fPassword" class="form-control" title="(4-8 characters)" type="password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]+$" 
+						minlength="4" maxlength="8" required placeholder="Password" />
 						<div id="errorPassword" class="invalid-feedback">Enter a correct password</div>
 					</div>
 					<div class="mt-3">
 						<label for="fPhone" class="form-label">Phone Number:</label>
-						<input id="fPhone" class="form-control" type="number" placeholder="Phone No." />
+						<input id="fPhone" class="form-control" type="number" placeholder="Phone No." pattern="^\d+$" inputmode="numeric" minlength="3" required />
 						<div id="errorPhone" class="invalid-feedback">Invalid phone number!! Must be 9 digits with no
 							letters</div>
 					</div>
 				</div>
 				<div class="col-12 mt-4 final">
-					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg" onclick="validate()">
+					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg">
 						<i class="fas fa-cart-arrow-down p-2"></i>Save
 					</button>
 				</div>
@@ -135,6 +135,19 @@
 
 	</div>
 
+	<div class="modal" tabindex="-1" id="successModal">
+		<div class="modal-dialog">
+		  <div class="modal-content">
+			<div class="modal-header" style="background-color: rgb(29, 242, 82);">
+			  <h5 class="modal-title">Checkout done</h5>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+			  <h5>Your checkout has been completed correctly.</h5>
+			</div>
+		  </div>
+		</div>
+	  </div>
 
 	<!-- Footer-->
 	<footer class="py-3 bg-dark">
@@ -174,8 +187,9 @@
 
 
 	<!-- Core theme JS-->
-	<script src="js/shop.js"></script>
-	<script src="js/checkout.js"></script>
+	<script src="js/products.js" type="module"></script>
+	<script src="js/shop.js" type="module"></script>
+	<script src="js/checkout.js" type="module"></script>
 </body>
 
 </html>
