--- a/checkout.html
+++ b/checkout.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link href="css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -85,22 +86,18 @@
 					<div class="mt-3">
 						<label for="fName" class="form-label">First Name:</label>
 						<input id="fName" class="form-control ml-3" type="text" placeholder="First Name"  pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]+$" minlength="3" required />
-						<div id="errorName" class="invalid-feedback">This field is required and must have, at least, 3
-							characters
+						<div id="errorName" class="invalid-feedback">
 						</div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fEmail" class="form-label">Email:</label>
 						<input id="fEmail" class="form-control ml-3" type="email" placeholder="Email" minlength="3" required />
-						<div id="errorEmail" class="invalid-feedback">This field is required and must contain an '@' and
-							have, at
-							least, 3 characters</div>
+						<div id="errorEmail" class="invalid-feedback"></div>
 					</div>
 					<div class="mt-3 ">
 						<label for="fAddress" class="form-label">Address:</label>
 						<input id="fAddress" class="form-control" type="text" placeholder="Address" minlength="3" required />
-						<div id="errorAddress" class="invalid-feedback">This field is required and must have, at least,
-							3 characters
+						<div id="errorAddress" class="invalid-feedback">
 						</div>
 					</div>
 				</div>
@@ -108,25 +105,23 @@
 					<div class="mt-3">
 						<label for="fLastN" class="form-label">Last Name:</label>
 						<input id="fLastN" class="form-control" type="text" placeholder="Last Name"  pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]+$" minlength="3" required />
-						<div id="errorLastN" class="invalid-feedback">This field is required and must have, at least, 3
-							characters
+						<div id="errorLastN" class="invalid-feedback">
 						</div>
 					</div>
 					<div class="mt-3">
 						<label for="fPassword" class="form-label">Password:</label>
 						<input id="fPassword" class="form-control" title="(4-8 characters)" type="password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]+$" 
 						minlength="4" maxlength="8" required placeholder="Password" />
-						<div id="errorPassword" class="invalid-feedback">Enter a correct password</div>
 					</div>
 					<div class="mt-3">
 						<label for="fPhone" class="form-label">Phone Number:</label>
-						<input id="fPhone" class="form-control" type="number" placeholder="Phone No." pattern="^\d+$" inputmode="numeric" minlength="3" required />
-						<div id="errorPhone" class="invalid-feedback">Invalid phone number!! Must be 9 digits with no
-							letters</div>
+						<input id="fPhone" class="form-control" type="tel" title="Invalid phone number!! Must be 9 digits with no
+							letters" placeholder="Phone No." pattern="[0-9]{9}" inputmode="numeric" minlength="3" maxlength="9" required />
+
 					</div>
 				</div>
 				<div class="col-12 mt-4 final">
-					<button type="submit" id="btn" class="p-2 px-4 btn btn-primary shadow-lg">
+					<button type="submit" id="btn" class="p-2 px-4 btn btn-success shadow-lg">
 						<i class="fas fa-cart-arrow-down p-2"></i>Save
 					</button>
 				</div>
@@ -138,7 +133,7 @@
 	<div class="modal" tabindex="-1" id="successModal">
 		<div class="modal-dialog">
 		  <div class="modal-content">
-			<div class="modal-header" style="background-color: rgb(29, 242, 82);">
+			<div class="modal-header">
 			  <h5 class="modal-title">Checkout done</h5>
 			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
