--- a/checkout.html
+++ b/checkout.html
@@ -7,12 +7,9 @@
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 	<title>Checkout</title>
-	<!-- Favicon-->
 	<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
-	<!-- Fontawesome icons-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,7 +18,6 @@
 </head>
 
 <body>
-	<!-- Navigation-->
 	<nav class="navbar py-3 py-lg-0 navbar-light bg-light navbar-expand-lg" id="navbar-example2">
 		<div class="container d-flex">
 			<a class="navbar-brand" href="#!">ShopNow</a>
@@ -33,7 +29,7 @@
 				</button>
 				<ul class="navbar-nav me-3 me-lg-0 d-flex flex-row align-items-center">
 					<li class="dropdown search-dropdown nav-item py-lg-3">
-						<a href="javascript:void(0)" class="btn btn-outline-dark flex-center" type="button"
+						<a href="javascript:void(0)" class="btn btn-outline-dark flex-center cart-button" type="button"
 							data-bs-toggle="modal" data-bs-target="#cartModal" onclick="open_modal()"
 							data-bs-auto-close="outside">
 							<i class="fas fa-shopping-cart me-1"></i> Cart <span
@@ -151,7 +147,7 @@
 		</div>
 	</footer>
 
-	<div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -167,7 +163,7 @@
 							<h3 class="text-center bill px-5">Select Something</h3>
 						</div>
 						<div class="text-center">
-							<a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
+							<a href="checkout.html" class="btn btn-primary checkout-button m-3">Checkout</a>
 						</div>
 					</div>
 				</div>
@@ -175,16 +171,14 @@
 		</div>
 	</div>
 
-	<!-- Bootstrap core JS-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
 		crossorigin="anonymous"></script>
 
 
-	<!-- Core theme JS-->
-	<script src="js/products.js" type="module"></script>
-	<script src="js/shop.js" type="module"></script>
-	<script src="js/checkout.js" type="module"></script>
+	<script src="scripts/products.js" type="module"></script>
+	<script src="scripts/shop.js" type="module"></script>
+	<script src="scripts/checkout.js" type="module"></script>
 </body>
 
 </html>
