--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 	<meta name="author" content="IT Academy" />
 	<meta name="theme-color" content="#212529" />
 	<title>ShopNow - Online Shopping</title>
-	<!-- Favicon-->
-	<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
-	<!-- Fontawesome icons-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,10 +19,8 @@
 </head>
 
 <body>
-	<!-- Skip Navigation -->
 	<a href="#main-content" class="skip-link visually-hidden-focusable">Skip to main content</a>
 
-	<!-- Navigation-->
 	<header class="primary-header">
 		<nav class="navbar py-3 py-lg-0 navbar-light bg-light navbar-expand-lg" id="main-nav">
 			<div class="container">
@@ -75,7 +70,6 @@
 	</header>
 
 	<main id="main-content">
-		<!-- Hero Section -->
 		<section class="hero bg-dark py-5" aria-label="Promotional banner">
 			<div class="container px-4 px-lg-5 my-5">
 				<div class="text-center text-white">
@@ -85,7 +79,6 @@
 			</div>
 		</section>
 
-		<!-- Product Sections -->
 		<article class="product-section pt-5" id="grocery">
 			<h2 class="text-center">
 				<i class="fas fa-shopping-basket pe-3" aria-hidden="true"></i>
@@ -93,10 +86,9 @@
 			</h2>
 			<div class="container px-4 px-lg-5 mt-5">
 				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-					<!-- Product Cards -->
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/oil.svg" alt="Cooking Oil product image"
+							<img class="card-img-top" src="./assets/images/oil.svg" alt="Cooking Oil product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -116,7 +108,7 @@
 					</div>
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/pasta.svg" alt="Pasta product image"
+							<img class="card-img-top" src="./assets/images/pasta.svg" alt="Pasta product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -136,7 +128,7 @@
 					</div>
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/cupcake.svg"
+							<img class="card-img-top" src="./assets/images/cupcake.svg"
 								alt="Instant cupcake mixture product image" loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -164,10 +156,9 @@
 			</h2>
 			<div class="container px-4 px-lg-5 mt-5">
 				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-					<!-- Product Cards -->
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/makeup.svg" alt="All-in-1 product image"
+							<img class="card-img-top" src="./assets/images/makeup.svg" alt="All-in-1 product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -187,7 +178,7 @@
 					</div>
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/zero.svg" alt="Zero makeup kit product image"
+							<img class="card-img-top" src="./assets/images/zero.svg" alt="Zero makeup kit product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -207,7 +198,7 @@
 					</div>
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/lip.svg" alt="Lip tints product image"
+							<img class="card-img-top" src="./assets/images/lip.svg" alt="Lip tints product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -235,10 +226,9 @@
 			</h2>
 			<div class="container px-4 px-lg-5 mt-5">
 				<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-					<!-- Product Cards -->
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/lawn.svg" alt="Lawn dress product image"
+							<img class="card-img-top" src="./assets/images/lawn.svg" alt="Lawn dress product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -258,7 +248,7 @@
 					</div>
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/chiffon.svg" alt="Lawn-chiffon combo product image"
+							<img class="card-img-top" src="./assets/images/chiffon.svg" alt="Lawn-chiffon combo product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -278,7 +268,7 @@
 					</div>
 					<div class="col mb-5">
 						<article class="card product-card h-100">
-							<img class="card-img-top" src="./images/frock.svg" alt="Toddler Frock product image"
+							<img class="card-img-top" src="./assets/images/frock.svg" alt="Toddler Frock product image"
 								loading="lazy" />
 							<div class="card-body p-4">
 								<div class="text-center">
@@ -301,7 +291,6 @@
 		</article>
 	</main>
 
-	<!-- Footer-->
 	<footer class="py-3 bg-dark">
 		<div class="container">
 			<p class="m-0 text-center text-white">Copyright &copy; ShopNow <span id="current-year">2025</span></p>
@@ -356,7 +345,7 @@
 						Total: $<span id="total_price">100</span>
 					</div>
 					<div class="text-center">
-						<a href="checkout.html" class="btn btn-success m-3">Checkout</a>
+						<a href="checkout.html" class="btn checkout-button  m-3">Checkout</a>
 						<button type="button" class="btn btn-secondary m-3" id="clean-cart">Clean Cart</button>
 					</div>
 				</div>
@@ -364,15 +353,13 @@
 		</div>
 	</div>
 
-	<!-- Bootstrap core JS-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
 	</script>
 
-	<!-- Core theme JS-->
-     <script src="js/products.js" type="module"></script>
-	<script src="js/shop.js" type="module"></script>
-	<script src="js/checkout.js" type="module"></script>
+     <script src="scripts/products.js" type="module"></script>
+	<script src="scripts/shop.js" type="module"></script>
+	<script src="scripts/checkout.js" type="module"></script>
 </body>
 
 </html>
