fixed menu + MVC pattern + cart.js WIP (buy - removeFromCart - cleanCart

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	<a href="#main-content" class="skip-link visually-hidden-focusable">Skip to main content</a>
 
-	<header class="primary-header">
+	<header class="primary-header position-fixed w-100">
 		<nav class="navbar py-3 py-lg-0 navbar-light bg-light navbar-expand-lg" id="main-nav">
 			<div class="container">
 				<a class="navbar-brand" href="#!" aria-label="ShopNow Home">ShopNow</a>
@@ -69,7 +69,7 @@
 		</nav>
 	</header>
 
-	<main id="main-content">
+	<main class="mb-4" id="main-content">
 		<section class="hero bg-dark py-5" aria-label="Promotional banner">
 			<div class="container px-4 px-lg-5 my-5">
 				<div class="text-center text-white">
@@ -357,8 +357,9 @@
 		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
 	</script>
 
-     <script src="scripts/products.js" type="module"></script>
-	<script src="scripts/shop.js" type="module"></script>
+    <script src="scripts/products.js" type="module"></script>
+	<script src="scripts/cart.js" type="module"></script>
+	<script src="scripts/main.js" type="module"></script>
 	<script src="scripts/checkout.js" type="module"></script>
 </body>
 
