--- a/checkout.html
+++ b/checkout.html
@@ -177,7 +177,8 @@
 
 
 	<script src="scripts/products.js" type="module"></script>
-	<script src="scripts/shop.js" type="module"></script>
+	<script src="scripts/cart.js" type="module"></script>
+	<script src="scripts/main.js" type="module"></script>
 	<script src="scripts/checkout.js" type="module"></script>
 </body>
 
