Create ui.js + complete js refactoring to use MVC pattern

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
 
     <script src="scripts/products.js" type="module"></script>
 	<script src="scripts/cart.js" type="module"></script>
+	<script src="scripts/ui.js" type="module"></script>
 	<script src="scripts/main.js" type="module"></script>
-	<script src="scripts/checkout.js" type="module"></script>
 </body>
 
 </html>
